--- a/ChunkUpload/ChunkUpload.csproj
+++ b/ChunkUpload/ChunkUpload.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
+  </ItemGroup>
+
 </Project>
