--- a/ChunkUpload/ChunkUpload.csproj
+++ b/ChunkUpload/ChunkUpload.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Abstract\" />
     <Folder Include="App_Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AzureUploader\AzureUploader.csproj" />
   </ItemGroup>
 
 </Project>
