--- a/AzureUploader/AzureUploader.csproj
+++ b/AzureUploader/AzureUploader.csproj
@@ -6,6 +6,11 @@
     <PackageId>AO.AzureUploader</PackageId>
     <Authors>Adam O'Neil</Authors>
     <Product>AO.AzureUploader</Product>
+    <Copyright>Copyright (c) 2020 Adam O'Neil</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/adamfoneil/ChunkUpload</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/adamfoneil/ChunkUpload</PackageProjectUrl>
+    <Description>Implement chunked uploads to Azure blob storage. Intended for use with DropzoneJS.</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +22,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
