--- a/AzureUploader/AzureUploader.csproj
+++ b/AzureUploader/AzureUploader.csproj
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/adamfoneil/ChunkUpload</RepositoryUrl>
     <PackageProjectUrl>https://github.com/adamfoneil/ChunkUpload</PackageProjectUrl>
     <Description>Implement chunked uploads to Azure blob storage. Intended for use with DropzoneJS.</Description>
-    <Version>0.9.0-beta</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
