--- a/AzureUploader/AzureUploader.csproj
+++ b/AzureUploader/AzureUploader.csproj
@@ -11,7 +11,8 @@
     <RepositoryUrl>https://github.com/adamfoneil/ChunkUpload</RepositoryUrl>
     <PackageProjectUrl>https://github.com/adamfoneil/ChunkUpload</PackageProjectUrl>
     <Description>Implement chunked uploads to Azure blob storage. Intended for use with DropzoneJS.</Description>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
+    <PackageReleaseNotes>https://github.com/adamfoneil/ChunkUpload/issues/6</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
