--- a/ChunkUpload/ChunkUpload.csproj
+++ b/ChunkUpload/ChunkUpload.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.19" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
